--- a/src/rover_description/config/controllers.yaml
+++ b/src/rover_description/config/controllers.yaml
@@ -1,6 +1,6 @@
 controller_manager:
   ros__parameters:
-    update_rate: 250 
+    update_rate: 100  # Hz - Balanced for performance and CPU usage
     use_sim_time: false
 
     diff_drive_controller:
@@ -9,41 +9,61 @@ controller_manager:
     joint_state_broadcaster:
       type: joint_state_broadcaster/JointStateBroadcaster
 
+# Skid-Steer Drive Controller Configuration
+# 4-wheel independent drive with differential steering
 diff_drive_controller:
   ros__parameters:
-    use_sim_time: false
-    use_stamped_vel: true
-    right_wheel_names: ["wheel_2", "wheel_3"]
-    left_wheel_names: ["wheel_1", "wheel_4"]
+    # Wheel Configuration
+    left_wheel_names: ["front_left_wheel_joint", "rear_left_wheel_joint"]
+    right_wheel_names: ["front_right_wheel_joint", "rear_right_wheel_joint"]
 
-    wheel_separation: 0.5874
-    wheel_radius: 0.11      
-    wheel_separation_multiplier: 1.5
+    # Physical Parameters (adjust based on actual measurements)
+    wheel_separation: 0.5874  # Distance between left and right wheels (m)
+    wheel_radius: 0.11        # Wheel radius (m)
+    
+    # Multipliers for calibration fine-tuning
+    wheel_separation_multiplier: 1.0  # Adjust if turning radius is off
     left_wheel_radius_multiplier: 1.0
     right_wheel_radius_multiplier: 1.0
 
-    publish_rate: 50.0
+    # Command Interface
+    use_stamped_vel: true  # Use TwistStamped for better time synchronization
+    cmd_vel_timeout: 0.5   # Stop if no command received for 0.5s
+
+    # Odometry Configuration
+    publish_rate: 50.0          # Hz - Odometry publishing rate
     odom_frame_id: odom
-    base_frame_id: base_link 
-    enable_odom_tf: false
+    base_frame_id: base_link
+    enable_odom_tf: false       # Let robot_localization handle odom->base_link
+    
+    # Odometry calculation mode
+    open_loop: false            # Use wheel encoder feedback (closed-loop)
+    position_feedback: true     # Use position for odometry calculation
+    
+    # Covariance matrices for sensor fusion
     pose_covariance_diagonal: [0.001, 0.001, 0.0, 0.0, 0.0, 0.01]
     twist_covariance_diagonal: [0.001, 0.001, 0.0, 0.0, 0.0, 0.01]
 
-    open_loop: false
-    cmd_vel_timeout: 0.5
-
+    # Velocity and Acceleration Limits
     linear:
       x:
         has_velocity_limits: true
-        max_velocity: 3.0
+        max_velocity: 2.0           # m/s - Maximum forward/backward speed
+        min_velocity: -2.0          # m/s - Maximum reverse speed
         has_acceleration_limits: true
-        max_acceleration: 1.5
+        max_acceleration: 1.0       # m/s² - Smooth acceleration
+        min_acceleration: -1.0      # m/s² - Smooth deceleration
+        has_jerk_limits: false
+        
     angular:
       z:
         has_velocity_limits: true
-        max_velocity: 3.5
+        max_velocity: 2.0           # rad/s - Maximum turning speed
+        min_velocity: -2.0          # rad/s
         has_acceleration_limits: true
-        max_acceleration: 2.0
+        max_acceleration: 1.5       # rad/s² - Smooth turning
+        min_acceleration: -1.5      # rad/s²
+        has_jerk_limits: false
 
 joint_state_broadcaster:
   ros__parameters:
