--- a/src/hardware_services/package.xml
+++ b/src/hardware_services/package.xml
@@ -2,15 +2,20 @@
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
   <name>hardware_services</name>
-  <version>0.0.0</version>
-  <description>TODO: Package description</description>
-  <maintainer email="rohitjangra7370@gmail.com">olympusforge</maintainer>
-  <license>TODO: License declaration</license>
+  <version>0.0.1</version>
+  <description>Hardware services for rover sensors</description>
+  <maintainer email="your_email@example.com">Your Name</maintainer>
+  <license>MIT</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
+  <buildtool_depend>ament_cmake_python</buildtool_depend>
 
-  <test_depend>ament_lint_auto</test_depend>
-  <test_depend>ament_lint_common</test_depend>
+  <depend>rclpy</depend>
+  <depend>sensor_msgs</depend>
+  <depend>geometry_msgs</depend>
+  <depend>nmea_navsat_driver</depend>
+
+  <exec_depend>python3-smbus2</exec_depend>
 
   <export>
     <build_type>ament_cmake</build_type>
